update swagger and docs
